[gd_scene load_steps=21 format=3 uid="uid://d1vrkvvchdtat"]

[ext_resource type="Script" path="res://scripts/characters/player.gd" id="1_lt4bi"]
[ext_resource type="Texture2D" uid="uid://d1ng8pigmggtg" path="res://sprites/characters/punk/Punk_idle.png" id="1_y0ooo"]
[ext_resource type="Script" path="res://scripts/characters/hurt_box.gd" id="3_0d4jq"]
[ext_resource type="Script" path="res://scripts/traps/hit_box.gd" id="4_d88nl"]
[ext_resource type="Texture2D" uid="uid://cb3i85skvmb73" path="res://sprites/weapons/Whip.png" id="4_i742j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dl216"]

[sub_resource type="AtlasTexture" id="AtlasTexture_huxmp"]
atlas = ExtResource("1_y0ooo")
region = Rect2(0, 11, 28, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mds56"]
atlas = ExtResource("1_y0ooo")
region = Rect2(48, 11, 28, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0gs6"]
atlas = ExtResource("1_y0ooo")
region = Rect2(96, 11, 28, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_74jtl"]
atlas = ExtResource("1_y0ooo")
region = Rect2(144, 11, 28, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_c400t"]
animations = [{
"frames": [SubResource("AtlasTexture_huxmp"), SubResource("AtlasTexture_mds56"), SubResource("AtlasTexture_g0gs6"), SubResource("AtlasTexture_74jtl")],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_to47i"]
atlas = ExtResource("4_i742j")
region = Rect2(0, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub3en"]
atlas = ExtResource("4_i742j")
region = Rect2(0, 16, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmg65"]
atlas = ExtResource("4_i742j")
region = Rect2(0, 32, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pmgc"]
atlas = ExtResource("4_i742j")
region = Rect2(0, 48, 64, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_b36h8"]
animations = [{
"frames": [SubResource("AtlasTexture_to47i")],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [SubResource("AtlasTexture_to47i"), SubResource("AtlasTexture_ub3en"), SubResource("AtlasTexture_wmg65"), SubResource("AtlasTexture_0pmgc")],
"loop": false,
"name": &"whip",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23s2f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2mcup"]
size = Vector2(20, 33)

[sub_resource type="Animation" id="Animation_n5fkk"]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite/WeaponSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"whip", &"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite/WeaponSprite/HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite/WeaponSprite/HitBox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(40, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite/WeaponSprite:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j317h"]
_data = {
"Attack": SubResource("Animation_n5fkk")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(0, -20)
script = ExtResource("1_lt4bi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_dl216")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
frames = SubResource("SpriteFrames_c400t")
playing = true

[node name="WeaponSprite" type="AnimatedSprite2D" parent="PlayerSprite"]
frames = SubResource("SpriteFrames_b36h8")
animation = &"whip"
offset = Vector2(31.152, -0.879)

[node name="HitBox" type="Area2D" parent="PlayerSprite/WeaponSprite"]
collision_layer = 2
collision_mask = 0
script = ExtResource("4_d88nl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSprite/WeaponSprite/HitBox"]
shape = SubResource("RectangleShape2D_23s2f")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("3_0d4jq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_2mcup")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j317h")
}
